tests/negative/gold/global-self-ref-test.gold
tests/negative/global-self-ref-test.toit:5:21: error: Can't access global 'some-global' while initializing it
some-global /int := some-global + 1
                    ^~~~~~~~~~~
tests/negative/global-self-ref-test.toit:7:34: error: Can't access global 'some-global3' while initializing it
some-global3 /int := just-block: some-global3
                                 ^~~~~~~~~~~~
Compilation failed
